syntax = "proto3";

package protobuf;

message RoomRequest{
  uint32 room_id = 1;
  uint32 creator_id = 2;
}

message RoomInfoRequest {
  uint32 room_id = 1;
  uint32 creator_id = 2;
  int64 flow = 3;
}

message RoomResponse{
  bool status = 1;
  uint32 room_id = 2;
  uint32 creator_id = 3;
  int64 flow = 4;
  int64 time_used = 5;
}

message ChangeResponse {
  bool status = 1;
  int64 num = 2;
}

service RoomService{
  rpc GetRoom(RoomRequest) returns (RoomResponse);
  rpc AddRoom(RoomInfoRequest) returns (ChangeResponse); //添加房间
  rpc UpdateFlow(RoomInfoRequest) returns (ChangeResponse); //更新房间流量
  rpc RemoveRoom(RoomRequest) returns (ChangeResponse); //删除房间
}